# ipc-performance

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: communication_error.hpp  communication_handler.hpp  data_header.hpp  data_object.hpp  data_type.hpp  datagram_socket.hpp  dbus.hpp  fifo.hpp  java_symbol.hpp  message_queue.hpp  shared_file.hpp  shared_memory.hpp  stream_socket.hpp  utility.hpp
include/benchmark/: benchmark.hpp  execution.hpp  latency.hpp  realworld.hpp  stats.hpp  throughput.hpp
include/handler/: communication_handler.hpp
include/object/: binary_data.hpp  data_header.hpp  data_type.hpp  ping.hpp
script/: run.sh
src/: data_header.cpp  datagram_socket.cpp  dbus.cpp  fifo.cpp  java_symbol.cpp  main.cpp  message_queue.cpp  ping.cpp  shared_file.cpp  shared_memory.cpp  stream_socket.cpp  utility.cpp
src/benchmark/: execution.cpp  latency.cpp  realworld.cpp  throughput.cpp
src/handler/: datagram_socket.cpp  dbus.cpp  fifo.cpp  message_queue.cpp  shared_file.cpp  shared_memory.cpp  stream_socket.cpp
src/object/: binary_data.cpp  data_header.cpp  java_symbol.cpp  ping.cpp
testdata/: fifo_trace.txt  fifo_trace_overlap.txt  main.py
testdata/sample/: PageScraper.java
